tags/v1.0.1/APIs/schemas/index.md
<!-- AUTOGENERATED FILE: DO NOT EDIT -->

# {{ site.github.project_tagline }}

## JSON Schemas for release/tag v1.0.1

- [base](with-refs/base.html) [(flattened)](resolved/base.html)
- [command](with-refs/command.html) [(flattened)](resolved/command.html)
- [command_health](with-refs/command_health.html) [(flattened)](resolved/command_health.html)
- [command_subscription](with-refs/command_subscription.html) [(flattened)](resolved/command_subscription.html)
- [error](with-refs/error.html) [(flattened)](resolved/error.html)
- [event](with-refs/event.html) [(flattened)](resolved/event.html)
- [event_boolean](with-refs/event_boolean.html) [(flattened)](resolved/event_boolean.html)
- [event_core](with-refs/event_core.html) [(flattened)](resolved/event_core.html)
- [event_number](with-refs/event_number.html) [(flattened)](resolved/event_number.html)
- [event_object](with-refs/event_object.html) [(flattened)](resolved/event_object.html)
- [event_string](with-refs/event_string.html) [(flattened)](resolved/event_string.html)
- [message](with-refs/message.html) [(flattened)](resolved/message.html)
- [message_connection_status](with-refs/message_connection_status.html) [(flattened)](resolved/message_connection_status.html)
- [message_health](with-refs/message_health.html) [(flattened)](resolved/message_health.html)
- [message_shutdown_reboot](with-refs/message_shutdown_reboot.html) [(flattened)](resolved/message_shutdown_reboot.html)
- [number](with-refs/number.html) [(flattened)](resolved/number.html)
- [receiver_transport_params_ext](with-refs/receiver_transport_params_ext.html) [(flattened)](resolved/receiver_transport_params_ext.html)
- [sender_transport_params_ext](with-refs/sender_transport_params_ext.html) [(flattened)](resolved/sender_transport_params_ext.html)
- [source](with-refs/source.html) [(flattened)](resolved/source.html)
- [sources](with-refs/sources.html) [(flattened)](resolved/sources.html)
- [type](with-refs/type.html) [(flattened)](resolved/type.html)
- [type_boolean](with-refs/type_boolean.html) [(flattened)](resolved/type_boolean.html)
- [type_boolean_enum](with-refs/type_boolean_enum.html) [(flattened)](resolved/type_boolean_enum.html)
- [type_number](with-refs/type_number.html) [(flattened)](resolved/type_number.html)
- [type_number_enum](with-refs/type_number_enum.html) [(flattened)](resolved/type_number_enum.html)
- [type_string](with-refs/type_string.html) [(flattened)](resolved/type_string.html)
- [type_string_enum](with-refs/type_string_enum.html) [(flattened)](resolved/type_string_enum.html)
